# tripflow

./: .gitignore  CLAUDE.md  KLARO_SETUP.md  README.md  SECURITY_AUDIT.md  package-lock.json  package.json  pnpm-lock.yaml  sonar-project.properties  turbo.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
apps/api/app/repositories/: __init__.py  itinerary_items.py  travel_plan_shares.py  travel_plans.py
apps/api/app/routers/: __init__.py  itinerary_items.py  travel_plan_shares.py  travel_plans.py
apps/api/app/schemas/: __init__.py  common.py  itinerary_items.py  travel_plan_shares.py  travel_plans.py
apps/api/app/services/: __init__.py  email.py  itinerary_items.py  travel_plan_shares.py  travel_plans.py
apps/api/tests/: conftest.py  test_dependencies.py
apps/api/tests/repositories/: test_itinerary_items_repository.py  test_travel_plans_repository.py
apps/api/tests/routers/: test_itinerary_items.py  test_travel_plan_shares.py  test_travel_plans.py
apps/api/tests/services/: test_email_service.py  test_travel_plans_service.py
apps/web/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: SESSION_TIMEOUT.md  database-schema.md  setup-supabase-key.md  supabase-auth-implementation-summary.md  supabase-auth-integration.md
public/: index.html
src/: app.js  authRouter.js  index.js  users.js
supabase/: config.toml
(+228 files in other folders)
